2010-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* ar.c (plugin_target): New.
	(main): Set plugin_target to "plugin" for --plugin.
	(open_inarch): Initialize target to plugin_target.
	(replace_members): Pass plugin_target to ar_emul_replace
	and ar_emul_append.

	* binemul.h (ar_emul_append): Add a target argument.
	(ar_emul_default_append): Likewise.
	(ar_emul_replace): Likewise.
	(ar_emul_default_replace): Likewise.
	(bin_emulation_xfer_struct): Add a target argument to
	ar_append and ar_replace.

	* binemul.c (ar_emul_append): Updated.  Pass target to bfd_openr.
	(do_ar_emul_default_append): Likewise.
	(ar_emul_default_append): Likewise.
	(ar_emul_replace): Likewise.
	(ar_emul_default_replace): Likewise.

2010-09-10  Ben Gardiner  <bengardiner@nanometrics.ca>

	* objcopy.c: Add --interleave-width option to allow interleaving
	of more than one byte at a time.
	(copy_width): New variable.
	(copy_options): Add --interleave-width.
	(copy_section): When interleaving copy in units of copy_width
	bytes.
	(copy_main): Parse the new option.
	* doc/binutils: Document the new option.
	* NEWS: Mention the new feature.

2010-09-09  Jakub Jelinek  <jakub@redhat.com>

	* dwarf.c (decode_location_expression): Fix data adjustment
	for DW_OP_GNU_implicit_pointer in v3+.

2010-09-09  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add entry to NEWS for hppa/som.

2010-09-09  Jakub Jelinek  <jakub@redhat.com>

	* dwarf.h (debug_info): Add offset_info and dwarf_version fields.
	* dwarf.c (decode_location_expression): Add offset_size and
	dwarf_version arguments.  Prefix DIE offset with 0x for
	DW_OP_call{2,4,_ref}.  Fix up DW_OP_call_ref operand size,
	complain if in frame info section.  Handle
	DW_OP_GNU_implicit_pointer.
	(read_and_display_attr_value, display_debug_loc,
	display_debug_frames): Adjust decode_location_expression callers.
	(process_debug_info): Save offset_size and dwarf_version values
	into debug_information array.

2010-09-07  Nick Clifton  <nickc@redhat.com>
